003_tasks/001_sprint-1/002_services/001_approval_service/001_service/etc/kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subject-approval-ingress
  namespace: teaching-action
  annotations:
    konghq.com/methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
    konghq.com/preserve-host: "true"
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: teaching-action.fbr.group
      http:
        paths:
          - backend:
              service:
                name: subject-approval-service
                port:
                  number: 80
            path: /subject-approval-api-service
            pathType: Prefix
  tls:
    - hosts:
        - teaching-action.fbr.group
      secretName: certificado.fbr.group
status:
  loadBalancer:
    ingress:
      - ip: 35.225.1.154
